# degenprime-test

./: LICENSE  README.md  pyproject.toml
src/degenprime/validate/: __init__.py  __main__.py
